--- a/app/src/main/res/layout/activity_feel.xml
+++ b/app/src/main/res/layout/activity_feel.xml
@@ -62,13 +62,14 @@
 
     <Button
         android:id="@+id/emoji1"
-        android:layout_width="76dp"
+        android:background="@drawable/invisbtn"
+        android:backgroundTint="@android:color/transparent"
+        android:layout_width="75dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,6 +79,7 @@
 
     <Button
         android:id="@+id/emoji2"
+        android:background="@drawable/invisbtn"
         android:layout_width="76dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
@@ -94,6 +96,7 @@
 
     <Button
         android:id="@+id/emoji3"
+        android:background="@drawable/invisbtn"
         android:layout_width="76dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
@@ -110,6 +113,7 @@
 
     <Button
         android:id="@+id/emoji4"
+        android:background="@drawable/invisbtn"
         android:layout_width="68dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
@@ -126,6 +130,7 @@
 
     <Button
         android:id="@+id/emoji5"
+        android:background="@drawable/invisbtn"
         android:layout_width="76dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
