--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -9,15 +9,33 @@
 
     <TextView
         android:id="@+id/tvLog"
-        android:layout_width="229dp"
-        android:layout_height="211dp"
+        android:layout_width="89dp"
+        android:layout_height="511dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:inputType="textMultiLine"
         android:text="Log Window"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.282"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.357" />
+        app:layout_constraintVertical_bias="0.929" />
+
+    <TextView
+        android:id="@+id/tvLog2"
+        android:layout_width="151dp"
+        android:layout_height="511dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:inputType="textMultiLine"
+        android:text="Log Window"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.846"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.931" />
+
+
 </android.support.constraint.ConstraintLayout>
